Fix: PDF 파일명 text-overflow 이슈 해결

--- a/src/assets/style/service/service-share.scss
+++ b/src/assets/style/service/service-share.scss
@@ -297,7 +297,9 @@ $share_savebtn_height: 2.929rem;
   min-height: 2.143rem;
   margin: 1.429rem;
   > .tooltip .tooltiptext p {
-    white-space: break-spaces;
+    white-space: pre-wrap;
+    text-overflow: unset;
+    line-break: anywhere;
   }
 }
 .share-body__backbutton-text {
